[project]
name = "aws-nova-canvas-mcp"
version = "0.1.4"
description = "An MCP server that allows you to generate and edit images using the Nova Canvas model of Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.23",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[project.scripts]
aws-nova-canvas-mcp = "aws_nova_canvas_mcp.server:main"


